# pigx_sars-cov-2

./: .gitignore  META.in  Makefile.am  README.md  configure.ac  guix.scm  manifest.scm  snakefile.py  test.sh.in
.github/workflows/: build.yml
development_toolkit/: Muts_RBDOnly_220207_wholegenomeReferene_t02.csv  debug_variantreport_p_sample.Rmd  debug_variantreport_p_sample_no_weighting.Rmd  deconvolution.R  mutation_sheet_220209_t07.csv  mutation_sheet_simulation_NT_t07_mu_lambda.csv  trimmed_210916-20-22h-mix_S1_snv.csv  trimmed_210916-20-22h-mix_S1_vep_sarscov2_parsed.txt
documentation/: hacking.md  prep_for_kraken_krona.md  user_installation_doc.md
etc/: pretty.txt  sample_sheet.csv.example  settings.yaml.in
reproducibility/: channels.scm  manifest.scm
scripts/: Kraken2-report.Rmd  Krona_report.Rmd  create_sample_quality_table.R  create_summary_table.R  creating_mutation_summary_table.R  creating_variants_summary_table.R  deconvolution.R  deconvolution_funs.R  download_databases.sh.in  fun_index.R  generateSiteFiles.R  get_qc_table.py  mutation_regression.R  overview_QC_table.R  pooling.R  pred_mutation_increase.R  qc_report_per_sample.rmd  renderReport.R  run_Kraken2-report.R  sample_coverage_score.R  table_extraction.R  variantreport_p_sample.rmd  vcfTocsv.py
scripts/Sample_prep_scripts/: overview_Kraken2_table.R  samplesheet_from_filelist.py  sigmuts_on_amplicons.rmd
scripts/report_scripts/: Kraken2_report.Rmd  Krona_report.Rmd  _settings.Rmd  index.Rmd  overview.Rmd  pool_variant_abundances.R  qc_report_per_sample.Rmd  qc_report_per_sample.rmd  taxonomic_classification.Rmd  timecourse.Rmd  variantreport_p_sample.Rmd  variantreport_p_sample.rmd  variantreport_per_sample.Rmd
snakefile_scripts/: download_tarball.py  rule_download_kraken_db.py  rule_download_krona_db.py  rule_download_vep_db.py  rule_render_qc_report.py
tests/: sample_sheet_se.csv  settings.yaml  setup_test_settings.yaml  setup_test_settings.yaml.in
tests/output/: fastp.html  fastp.json  linear_regression_results.csv  mutations_counts.csv  overview_QC.csv
tests/output/coverage/: Test0_amplicons.csv  Test0_coverage.csv  Test0_merged_covs.csv  Test2_amplicons.csv  Test2_coverage.csv  Test2_merged_covs.csv  Test5_amplicons.csv  Test5_coverage.csv  Test5_merged_covs.csv  report_download_coverage.csv
(+96 files in other folders)
